fixed z-index for the search div in desktop

--- a/themes/racc/src/sass/block/_search-form.scss
+++ b/themes/racc/src/sass/block/_search-form.scss
@@ -86,6 +86,8 @@
 
 @media all and (min-width: 1024px){
     .search_form{
+        z-index: 1000;
+
         .topbarsearch{
             display: block;
             width: 100%;
@@ -94,13 +96,13 @@
 
             form{
                 margin-top: 0;
+            }
 
-                .search-form__submit{
-                    height: 43px;
-                    font-size: 19px;
-                    margin: 0 45% !important;
-                    width: 10%;
-                }
+            .search-form__submit{
+                height: 43px;
+                font-size: 19px;
+                margin: 0 45% !important;
+                width: 10%;
             }
     
             i{
